@@ -3,7 +3,7 @@ dnl	This file is an input file used by the GNU "autoconf" program to
 dnl	generate the file "configure", which is run during Tcl installation
 dnl	to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.172 2007/12/13 15:28:41 dgp Exp $
+# RCS: @(#) $Id: configure.in,v 1.173 2008/01/02 19:03:30 dgp Exp $
 
 AC_INIT([tcl],[8.5])
 AC_PREREQ(2.59)
@@ -27,7 +27,7 @@ m4_ifdef([SC_USE_CONFIG_HEADERS], [
 TCL_VERSION=8.5
 TCL_MAJOR_VERSION=8
 TCL_MINOR_VERSION=5
-TCL_PATCH_LEVEL=".0"
+TCL_PATCH_LEVEL=".1b1"
 VERSION=${TCL_VERSION}
 
 #------------------------------------------------------------------------
